<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:apps="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ab_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        apps:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ab_add"
        android:title="@string/action_add"
        apps:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ab_share"
        android:title="@string/action_share"
        apps:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ab_upload"
        android:title="@string/action_upload"
        apps:showAsAction="ifRoom|withText"
        />

</menu>